# image-classification-demo

./: .gitignore  README.md  TASKS.md  evaluate.py  findings.md  progress.md  pyproject.toml  task_plan.md  train.py
.claude/: CLAUDE.md  settings.local.json
.claude/plan/: current-focus.md  roadmap.md
conf/: config.yaml
conf/data/: cifar10.yaml
conf/model/: resnet18.yaml
conf/trainer/: default.yaml
src/data_module/: __init__.py  dataset.py  transform.py
src/model_module/: __init__.py  base_model.py  resnet.py
src/trainer_module/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  seed.py
